report9/late/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET var vars EQ expr SEMISEMI
   4           | LET REC var var EQ expr SEMISEMI
   5           | LET REC var EQ expr SEMISEMI

   6  expr : LET var EQ expr IN expr
   7       | LET var vars EQ expr IN expr
   8       | LET REC var var EQ expr IN expr
   9       | IF expr THEN expr ELSE expr
  10       | FUN var ARROW expr
  11       | FUN var vars ARROW expr
  12       | DFUN var ARROW expr
  13       | arith_expr EQ arith_expr
  14       | arith_expr LT arith_expr
  15       | MATCH expr WITH cases
  16       | MATCH expr WITH BAR cases
  17       | list_expr

  18  cases : pattern ARROW expr
  19        | pattern ARROW expr BAR cases

  20  pattern : atomic_pattern CONS pattern
  21          | atomic_pattern

  22  atomic_pattern : INT
  23                 | BOOL
  24                 | var
  25                 | LPAR pattern COMMA pattern RPAR
  26                 | LBRACKET RBRACKET
  27                 | LPAR pattern RPAR

  28  list_expr : arith_expr CONS list_expr
  29            | arith_expr

  30  arith_expr : arith_expr PLUS factor_expr
  31             | arith_expr MINUS factor_expr
  32             | factor_expr

  33  factor_expr : factor_expr TIMES app_expr
  34              | factor_expr DIV app_expr
  35              | app_expr

  36  app_expr : app_expr atomic_expr
  37           | atomic_expr

  38  atomic_expr : INT
  39              | BOOL
  40              | LPAR expr COMMA expr RPAR
  41              | LBRACKET RBRACKET
  42              | ID
  43              | LPAR expr RPAR

  44  vars : var vars
  45       | var

  46  var : ID

  47  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (47)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	toplevel  goto 13
	expr  goto 14
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (38)

	.  reduce 38


state 4
	atomic_expr : BOOL .  (39)

	.  reduce 39


state 5
	atomic_expr : ID .  (42)

	.  reduce 42


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . var vars EQ expr SEMISEMI  (3)
	toplevel : LET . REC var var EQ expr SEMISEMI  (4)
	toplevel : LET . REC var EQ expr SEMISEMI  (5)
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . var vars EQ expr IN expr  (7)
	expr : LET . REC var var EQ expr IN expr  (8)

	ID  shift 20
	REC  shift 21
	.  error

	var  goto 22


state 7
	expr : IF . expr THEN expr ELSE expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 24
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 8
	atomic_expr : LPAR . expr COMMA expr RPAR  (40)
	atomic_expr : LPAR . expr RPAR  (43)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 25
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 9
	expr : FUN . var ARROW expr  (10)
	expr : FUN . var vars ARROW expr  (11)

	ID  shift 20
	.  error

	var  goto 26


state 10
	expr : DFUN . var ARROW expr  (12)

	ID  shift 20
	.  error

	var  goto 27


state 11
	atomic_expr : LBRACKET . RBRACKET  (41)

	RBRACKET  shift 28
	.  error


state 12
	expr : MATCH . expr WITH cases  (15)
	expr : MATCH . expr WITH BAR cases  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 29
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 13
	%entry% : '\001' toplevel .  (47)

	.  reduce 47


state 14
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 30
	.  error


state 15
	expr : arith_expr . EQ arith_expr  (13)
	expr : arith_expr . LT arith_expr  (14)
	list_expr : arith_expr . CONS list_expr  (28)
	list_expr : arith_expr .  (29)
	arith_expr : arith_expr . PLUS factor_expr  (30)
	arith_expr : arith_expr . MINUS factor_expr  (31)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	LT  shift 34
	CONS  shift 35
	IN  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	RPAR  reduce 29
	COMMA  reduce 29
	WITH  reduce 29
	BAR  reduce 29
	SEMISEMI  reduce 29


state 16
	expr : list_expr .  (17)

	.  reduce 17


state 17
	arith_expr : factor_expr .  (32)
	factor_expr : factor_expr . TIMES app_expr  (33)
	factor_expr : factor_expr . DIV app_expr  (34)

	TIMES  shift 36
	DIV  shift 37
	IN  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	EQ  reduce 32
	LT  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	RPAR  reduce 32
	CONS  reduce 32
	COMMA  reduce 32
	WITH  reduce 32
	BAR  reduce 32
	SEMISEMI  reduce 32


state 18
	factor_expr : app_expr .  (35)
	app_expr : app_expr . atomic_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 35
	PLUS  reduce 35
	TIMES  reduce 35
	MINUS  reduce 35
	DIV  reduce 35
	EQ  reduce 35
	LT  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	RPAR  reduce 35
	CONS  reduce 35
	COMMA  reduce 35
	WITH  reduce 35
	BAR  reduce 35
	SEMISEMI  reduce 35

	atomic_expr  goto 38


state 19
	app_expr : atomic_expr .  (37)

	.  reduce 37


state 20
	var : ID .  (46)

	.  reduce 46


state 21
	toplevel : LET REC . var var EQ expr SEMISEMI  (4)
	toplevel : LET REC . var EQ expr SEMISEMI  (5)
	expr : LET REC . var var EQ expr IN expr  (8)

	ID  shift 20
	.  error

	var  goto 39


state 22
	toplevel : LET var . EQ expr SEMISEMI  (2)
	toplevel : LET var . vars EQ expr SEMISEMI  (3)
	expr : LET var . EQ expr IN expr  (6)
	expr : LET var . vars EQ expr IN expr  (7)

	ID  shift 20
	EQ  shift 40
	.  error

	var  goto 41
	vars  goto 42


state 23
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . var vars EQ expr IN expr  (7)
	expr : LET . REC var var EQ expr IN expr  (8)

	ID  shift 20
	REC  shift 43
	.  error

	var  goto 44


state 24
	expr : IF expr . THEN expr ELSE expr  (9)

	THEN  shift 45
	.  error


state 25
	atomic_expr : LPAR expr . COMMA expr RPAR  (40)
	atomic_expr : LPAR expr . RPAR  (43)

	RPAR  shift 46
	COMMA  shift 47
	.  error


state 26
	expr : FUN var . ARROW expr  (10)
	expr : FUN var . vars ARROW expr  (11)

	ID  shift 20
	ARROW  shift 48
	.  error

	var  goto 41
	vars  goto 49


state 27
	expr : DFUN var . ARROW expr  (12)

	ARROW  shift 50
	.  error


state 28
	atomic_expr : LBRACKET RBRACKET .  (41)

	.  reduce 41


state 29
	expr : MATCH expr . WITH cases  (15)
	expr : MATCH expr . WITH BAR cases  (16)

	WITH  shift 51
	.  error


state 30
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 31
	arith_expr : arith_expr PLUS . factor_expr  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 52
	app_expr  goto 18
	atomic_expr  goto 19


state 32
	arith_expr : arith_expr MINUS . factor_expr  (31)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 53
	app_expr  goto 18
	atomic_expr  goto 19


state 33
	expr : arith_expr EQ . arith_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 54
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 34
	expr : arith_expr LT . arith_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 55
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 35
	list_expr : arith_expr CONS . list_expr  (28)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 56
	list_expr  goto 57
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 36
	factor_expr : factor_expr TIMES . app_expr  (33)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 58
	atomic_expr  goto 19


state 37
	factor_expr : factor_expr DIV . app_expr  (34)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 59
	atomic_expr  goto 19


state 38
	app_expr : app_expr atomic_expr .  (36)

	.  reduce 36


state 39
	toplevel : LET REC var . var EQ expr SEMISEMI  (4)
	toplevel : LET REC var . EQ expr SEMISEMI  (5)
	expr : LET REC var . var EQ expr IN expr  (8)

	ID  shift 20
	EQ  shift 60
	.  error

	var  goto 61


state 40
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 62
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 41
	vars : var . vars  (44)
	vars : var .  (45)

	ID  shift 20
	EQ  reduce 45
	ARROW  reduce 45

	var  goto 41
	vars  goto 63


state 42
	toplevel : LET var vars . EQ expr SEMISEMI  (3)
	expr : LET var vars . EQ expr IN expr  (7)

	EQ  shift 64
	.  error


state 43
	expr : LET REC . var var EQ expr IN expr  (8)

	ID  shift 20
	.  error

	var  goto 65


state 44
	expr : LET var . EQ expr IN expr  (6)
	expr : LET var . vars EQ expr IN expr  (7)

	ID  shift 20
	EQ  shift 66
	.  error

	var  goto 41
	vars  goto 67


state 45
	expr : IF expr THEN . expr ELSE expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 68
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 46
	atomic_expr : LPAR expr RPAR .  (43)

	.  reduce 43


state 47
	atomic_expr : LPAR expr COMMA . expr RPAR  (40)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 69
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 48
	expr : FUN var ARROW . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 70
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 49
	expr : FUN var vars . ARROW expr  (11)

	ARROW  shift 71
	.  error


state 50
	expr : DFUN var ARROW . expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 72
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 51
	expr : MATCH expr WITH . cases  (15)
	expr : MATCH expr WITH . BAR cases  (16)

	INT  shift 73
	BOOL  shift 74
	ID  shift 20
	LPAR  shift 75
	LBRACKET  shift 76
	BAR  shift 77
	.  error

	var  goto 78
	cases  goto 79
	pattern  goto 80
	atomic_pattern  goto 81


state 52
	arith_expr : arith_expr PLUS factor_expr .  (30)
	factor_expr : factor_expr . TIMES app_expr  (33)
	factor_expr : factor_expr . DIV app_expr  (34)

	TIMES  shift 36
	DIV  shift 37
	IN  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	EQ  reduce 30
	LT  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	RPAR  reduce 30
	CONS  reduce 30
	COMMA  reduce 30
	WITH  reduce 30
	BAR  reduce 30
	SEMISEMI  reduce 30


state 53
	arith_expr : arith_expr MINUS factor_expr .  (31)
	factor_expr : factor_expr . TIMES app_expr  (33)
	factor_expr : factor_expr . DIV app_expr  (34)

	TIMES  shift 36
	DIV  shift 37
	IN  reduce 31
	PLUS  reduce 31
	MINUS  reduce 31
	EQ  reduce 31
	LT  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	RPAR  reduce 31
	CONS  reduce 31
	COMMA  reduce 31
	WITH  reduce 31
	BAR  reduce 31
	SEMISEMI  reduce 31


state 54
	expr : arith_expr EQ arith_expr .  (13)
	arith_expr : arith_expr . PLUS factor_expr  (30)
	arith_expr : arith_expr . MINUS factor_expr  (31)

	PLUS  shift 31
	MINUS  shift 32
	IN  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	COMMA  reduce 13
	WITH  reduce 13
	BAR  reduce 13
	SEMISEMI  reduce 13


state 55
	expr : arith_expr LT arith_expr .  (14)
	arith_expr : arith_expr . PLUS factor_expr  (30)
	arith_expr : arith_expr . MINUS factor_expr  (31)

	PLUS  shift 31
	MINUS  shift 32
	IN  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	COMMA  reduce 14
	WITH  reduce 14
	BAR  reduce 14
	SEMISEMI  reduce 14


state 56
	list_expr : arith_expr . CONS list_expr  (28)
	list_expr : arith_expr .  (29)
	arith_expr : arith_expr . PLUS factor_expr  (30)
	arith_expr : arith_expr . MINUS factor_expr  (31)

	PLUS  shift 31
	MINUS  shift 32
	CONS  shift 35
	IN  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	RPAR  reduce 29
	COMMA  reduce 29
	WITH  reduce 29
	BAR  reduce 29
	SEMISEMI  reduce 29


state 57
	list_expr : arith_expr CONS list_expr .  (28)

	.  reduce 28


state 58
	factor_expr : factor_expr TIMES app_expr .  (33)
	app_expr : app_expr . atomic_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 33
	PLUS  reduce 33
	TIMES  reduce 33
	MINUS  reduce 33
	DIV  reduce 33
	EQ  reduce 33
	LT  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	RPAR  reduce 33
	CONS  reduce 33
	COMMA  reduce 33
	WITH  reduce 33
	BAR  reduce 33
	SEMISEMI  reduce 33

	atomic_expr  goto 38


state 59
	factor_expr : factor_expr DIV app_expr .  (34)
	app_expr : app_expr . atomic_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 34
	PLUS  reduce 34
	TIMES  reduce 34
	MINUS  reduce 34
	DIV  reduce 34
	EQ  reduce 34
	LT  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	RPAR  reduce 34
	CONS  reduce 34
	COMMA  reduce 34
	WITH  reduce 34
	BAR  reduce 34
	SEMISEMI  reduce 34

	atomic_expr  goto 38


state 60
	toplevel : LET REC var EQ . expr SEMISEMI  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 82
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 61
	toplevel : LET REC var var . EQ expr SEMISEMI  (4)
	expr : LET REC var var . EQ expr IN expr  (8)

	EQ  shift 83
	.  error


state 62
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 84
	SEMISEMI  shift 85
	.  error


state 63
	vars : var vars .  (44)

	.  reduce 44


state 64
	toplevel : LET var vars EQ . expr SEMISEMI  (3)
	expr : LET var vars EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 86
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 65
	expr : LET REC var . var EQ expr IN expr  (8)

	ID  shift 20
	.  error

	var  goto 87


state 66
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 88
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 67
	expr : LET var vars . EQ expr IN expr  (7)

	EQ  shift 89
	.  error


state 68
	expr : IF expr THEN expr . ELSE expr  (9)

	ELSE  shift 90
	.  error


state 69
	atomic_expr : LPAR expr COMMA expr . RPAR  (40)

	RPAR  shift 91
	.  error


state 70
	expr : FUN var ARROW expr .  (10)

	.  reduce 10


state 71
	expr : FUN var vars ARROW . expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 92
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 72
	expr : DFUN var ARROW expr .  (12)

	.  reduce 12


state 73
	atomic_pattern : INT .  (22)

	.  reduce 22


state 74
	atomic_pattern : BOOL .  (23)

	.  reduce 23


state 75
	atomic_pattern : LPAR . pattern COMMA pattern RPAR  (25)
	atomic_pattern : LPAR . pattern RPAR  (27)

	INT  shift 73
	BOOL  shift 74
	ID  shift 20
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	var  goto 78
	pattern  goto 93
	atomic_pattern  goto 81


state 76
	atomic_pattern : LBRACKET . RBRACKET  (26)

	RBRACKET  shift 94
	.  error


state 77
	expr : MATCH expr WITH BAR . cases  (16)

	INT  shift 73
	BOOL  shift 74
	ID  shift 20
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	var  goto 78
	cases  goto 95
	pattern  goto 80
	atomic_pattern  goto 81


state 78
	atomic_pattern : var .  (24)

	.  reduce 24


state 79
	expr : MATCH expr WITH cases .  (15)

	.  reduce 15


state 80
	cases : pattern . ARROW expr  (18)
	cases : pattern . ARROW expr BAR cases  (19)

	ARROW  shift 96
	.  error


state 81
	pattern : atomic_pattern . CONS pattern  (20)
	pattern : atomic_pattern .  (21)

	CONS  shift 97
	RPAR  reduce 21
	ARROW  reduce 21
	COMMA  reduce 21


state 82
	toplevel : LET REC var EQ expr . SEMISEMI  (5)

	SEMISEMI  shift 98
	.  error


state 83
	toplevel : LET REC var var EQ . expr SEMISEMI  (4)
	expr : LET REC var var EQ . expr IN expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 99
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 84
	expr : LET var EQ expr IN . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 100
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 85
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 86
	toplevel : LET var vars EQ expr . SEMISEMI  (3)
	expr : LET var vars EQ expr . IN expr  (7)

	IN  shift 101
	SEMISEMI  shift 102
	.  error


state 87
	expr : LET REC var var . EQ expr IN expr  (8)

	EQ  shift 103
	.  error


state 88
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 84
	.  error


state 89
	expr : LET var vars EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 104
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 90
	expr : IF expr THEN expr ELSE . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 105
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 91
	atomic_expr : LPAR expr COMMA expr RPAR .  (40)

	.  reduce 40


state 92
	expr : FUN var vars ARROW expr .  (11)

	.  reduce 11


state 93
	atomic_pattern : LPAR pattern . COMMA pattern RPAR  (25)
	atomic_pattern : LPAR pattern . RPAR  (27)

	RPAR  shift 106
	COMMA  shift 107
	.  error


state 94
	atomic_pattern : LBRACKET RBRACKET .  (26)

	.  reduce 26


state 95
	expr : MATCH expr WITH BAR cases .  (16)

	.  reduce 16


state 96
	cases : pattern ARROW . expr  (18)
	cases : pattern ARROW . expr BAR cases  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 108
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 97
	pattern : atomic_pattern CONS . pattern  (20)

	INT  shift 73
	BOOL  shift 74
	ID  shift 20
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	var  goto 78
	pattern  goto 109
	atomic_pattern  goto 81


state 98
	toplevel : LET REC var EQ expr SEMISEMI .  (5)

	.  reduce 5


state 99
	toplevel : LET REC var var EQ expr . SEMISEMI  (4)
	expr : LET REC var var EQ expr . IN expr  (8)

	IN  shift 110
	SEMISEMI  shift 111
	.  error


state 100
	expr : LET var EQ expr IN expr .  (6)

	.  reduce 6


state 101
	expr : LET var vars EQ expr IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 112
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 102
	toplevel : LET var vars EQ expr SEMISEMI .  (3)

	.  reduce 3


state 103
	expr : LET REC var var EQ . expr IN expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 113
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 104
	expr : LET var vars EQ expr . IN expr  (7)

	IN  shift 101
	.  error


state 105
	expr : IF expr THEN expr ELSE expr .  (9)

	.  reduce 9


state 106
	atomic_pattern : LPAR pattern RPAR .  (27)

	.  reduce 27


state 107
	atomic_pattern : LPAR pattern COMMA . pattern RPAR  (25)

	INT  shift 73
	BOOL  shift 74
	ID  shift 20
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	var  goto 78
	pattern  goto 114
	atomic_pattern  goto 81


108: shift/reduce conflict (shift 115, reduce 18) on BAR
state 108
	cases : pattern ARROW expr .  (18)
	cases : pattern ARROW expr . BAR cases  (19)

	BAR  shift 115
	IN  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	COMMA  reduce 18
	WITH  reduce 18
	SEMISEMI  reduce 18


state 109
	pattern : atomic_pattern CONS pattern .  (20)

	.  reduce 20


state 110
	expr : LET REC var var EQ expr IN . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 116
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 111
	toplevel : LET REC var var EQ expr SEMISEMI .  (4)

	.  reduce 4


state 112
	expr : LET var vars EQ expr IN expr .  (7)

	.  reduce 7


state 113
	expr : LET REC var var EQ expr . IN expr  (8)

	IN  shift 110
	.  error


state 114
	atomic_pattern : LPAR pattern COMMA pattern . RPAR  (25)

	RPAR  shift 117
	.  error


state 115
	cases : pattern ARROW expr BAR . cases  (19)

	INT  shift 73
	BOOL  shift 74
	ID  shift 20
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	var  goto 78
	cases  goto 118
	pattern  goto 80
	atomic_pattern  goto 81


state 116
	expr : LET REC var var EQ expr IN expr .  (8)

	.  reduce 8


state 117
	atomic_pattern : LPAR pattern COMMA pattern RPAR .  (25)

	.  reduce 25


state 118
	cases : pattern ARROW expr BAR cases .  (19)

	.  reduce 19


State 108 contains 1 shift/reduce conflict.


32 terminals, 14 nonterminals
48 grammar rules, 119 states
